--- a/blog/app/views/articles/new.html.erb
+++ b/blog/app/views/articles/new.html.erb
@@ -1,25 +1,6 @@
 <h1>New Article</h1>
 
-<%= form_with model: @article do |form| %>
-  <div>
-    <%= form.label :title %><br>
-    <%= form.text_field :title %>
+<%= render "form", article: @articles %>
 
-    <% @articles.errors.full_messages_for(:title).each do |message| %>
-      <div><%= message %></div>
-<% end %>
-  </div>
 
-  <div>
-    <%= form.label :body %><br>
-    <%= form.text_area :body %>
 
-        <% @articles.errors.full_messages_for(:body).each do |message| %>
-      <div><%= message %></div>
-      <% end %>
-  </div>
-
-  <div>
-    <%= form.submit %>
-  </div>
-<% end %>
