--- a/blog/app/views/articles/show.html.erb
+++ b/blog/app/views/articles/show.html.erb
@@ -1,3 +1,16 @@
-<h1><%= @article.title%></h1>
+<h1><%= @articles.title%></h1>
 
-<p><%= @article.body%></p>
+<p><%= @articles.body%></p>
+
+<ul>
+  <li><%= link_to "Edit", edit_article_path(@articles) %></li>
+   <li><%= link_to "Destroy", article_path(@articles),
+                  method: :delete,
+                  data: { confirm: "Are you sure?" } %></li>
+</ul>
+
+<h2>Comments</h2>
+<%= render @articles.comments%>
+
+<h2>Add a comment:</h2>
+<%= render 'comments/form'%>
